<resources>
    <string name="app_name">RUPizzeria</string>
    <string name="photo_for_splashing_screen">Photo for splashing screen</string>
    <string name="splashing_screen_string">Let\'s crust !</string>
    <string name="main_menu_header">Menu</string>
    <string name="chicago_style">Chicago Pizza Style</string>
    <string name="main_chicago_description">Deep-dish crust packed with rich layers of cheese, hearty toppings, and zesty tomato sauce, offering a thick, indulgent bite in every slice.</string>
    <string name="ny_style">New York Pizza Style</string>
    <string name="main_ny_description">Hand-stretched thin and cut into six big, foldable slices offering a perfect balance of sauce, cheese, and crust in every bite.</string>
    <string name="pizza_image_description">Image of the selected pizza</string>
    <string name="crust_label">%s crust</string>
    <string name="select_size">Select Size: </string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="select_toppings">Select Toppings:</string>
    <string name="pizza_price">$%.2f</string>
    <string name="back_button_description">Back button</string>
    <string name="addToCart_button">Add To Cart</string>

    <string name="cart_header">Your Cart</string>
    <string name="order_id">Order ID: %d</string>
    <string name="order_quantity">Total Items: %d</string>

    <string name="subtotal">Subtotal: $%.2f</string>
    <string name="sale_tax">Sales Tax: $%.2f</string>
    <string name="total_price">Total: $%.2f</string>
    <string name="place_order">Place Order</string>
    <string name="remove_button_description">Remove pizza button</string>
    <string name="pizza_style">%s</string>
    <string name="pizza_crust">Crust: %s</string>
    <string name="pizza_type_size">%s (%s)</string>
    <string name="pizza_toppings">%s</string>

    <string name="order_header">Orders</string>
    <string name="view_order">View Order Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="close_details_window">Close order details window</string>

    <string name="nav_home">Home</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_order">Order</string>



</resources>