<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/arrow_back_btn_background"
            android:contentDescription="@string/back_button_description"
            android:scaleType="center"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tv_headerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/order_header"
            android:textColor="@color/primary_red"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lv_orders"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/order_details_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_close_details"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close_details_window"
            app:srcCompat="@drawable/ic_close"
            android:padding="4dp"
            app:tint="@color/primary_red" />

        <TextView
            android:id="@+id/tv_order_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order_items"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/tv_subtotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtotal"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/tv_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sale_tax"
                android:paddingBottom="4dp" />

            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_price" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            android:backgroundTint="@color/primary_red"
            android:textColor="@android:color/white"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>